kubernetes/apps/netbird/netbird/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
