kubernetes/apps/netbird/netbird/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-dashboard
  template:
    metadata:
      labels:
        app: netbird-dashboard
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: dashboard
          image: docker.io/netbirdio/dashboard:main-rootless
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: false
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  selector:
    app: netbird-dashboard
  ports:
    - name: http
      port: 8080
      targetPort: 80
