kubernetes/apps/netbird/netbird/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "netbird.lab.kalitsune.net"
  rules:
    - backendRefs:
        - name: netbird-dashboard
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-server
  namespace: netbird
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "netbird.lab.kalitsune.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /management.ManagementService/
        - path:
            type: PathPrefix
            value: /signal.SignalExchange/
        - path:
            type: PathPrefix
            value: /relay
        - path:
            type: PathPrefix
            value: /oauth2
        - path:
            type: PathPrefix
            value: /device/callback
      backendRefs:
        - name: netbird-server
          port: 443
