kubernetes/apps/netbird/netbird/timeouts.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: netbird-server-timeouts
  namespace: netbird
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: netbird-server
  timeout:
    http:
      streamIdleTimeout: 0s
      requestTimeout: 0s
